2007-06-22  Inge Wallin  <inge@lysator.liu.se>

	Cleaning
	* src/lib/MarbleWidget.{h,cpp}: Cleaning

	Fix a bug where wrong PlaceMark was reused.
	* src/lib/placemarkpainter.cpp (class VisiblePlaceMark): new method
	(paintPlaceFolder): Set PlaceMark when a VisiblePlaceMark is reused.

	Optimize memory usage by only save labels for those PlaceMarks
	that are actually visible.
	* src/lib/placemark.h (class PlaceMark): Remove members
	m_symbolPixmap, m_symbolPos, m_labelPixmap, m_textRect, m_visible
	and their accessor functions.
	* src/lib/placemark.cpp: (PlaceMark): Remove initialization of
	removed members.
	* src/lib/placemark.h: (PlaceMarkContainer::clearTextPixmaps):
	Remove 
	* src/lib/placemarkpainter.h (class PlaceMarkPainter): New members
	m_visiblePlacemarks, m_visiblePlacemarksPool
	* src/lib/placemarkpainter.cpp (class VisiblePlaceMark): New class
	(paintPlaceFolder): Use the VisiblePlacemarks in painting
	* src/lib/MarbleModel.cpp (setMapTheme): Don't call clearTextPixmaps
	* src/lib/MarbleWidget.cpp (centerOn): Don't call clearTextPixmaps

2007-06-21  Andrew Manson   <g.real.ate@gmail.com>

	Fixed a simple off by one error in TextureMapper.cpp. The issue
	was with the implementation of interlacing, or in fact when the
	display stopped using that method to draw.

2007-06-19  Inge Wallin  <inge@lysator.liu.se>

	Fix linking issue with AbstractLayer and Q_OBJECT
	* src/lib/CMakeLists.txt: Include AbstractLayer/AbstractLayer.cpp
	* src/lib/AbstractLayer/AbstractLayer.cpp: Include moc file.

2007-06-19  Andrew Manson   <g.real.ate@gmail.com>

    Incuded the nessary classes for all GPS Data Structures available
    in the GPX schema.
    * src/lib/gps/GpsElement.[cpp,h] : Added
    * src/lib/gps/Route.[cpp,h] : Added
    * src/lib/gps/Track.[cpp,h] : Added
    * src/lib/gps/Waypoint.[cpp,h] : Added
    * src/lib/gps/WaypointContainer.[cpp,h] : Added
    
    Added Implementations of nessary AbstractLayer classes that are
    extended by the GPS Classes.